some corrections are incorporated

--- a/tex-for-print/jss-001-281.tex
+++ b/tex-for-print/jss-001-281.tex
@@ -6605,7 +6605,7 @@ EvamaSaTxkalAshecxYva sadoyxVjAteV parxkiVtiRtAH ||
 \end{shl}
 \medskip
 \pauthor{(vA.shu.A., 7. 33-35)}
-\newmeaning{\arthanonum{\qquad vAmadeVvamaMtarxda hadimUru kalegaLu: 1) vAmadeVvAya namaH, 2) jeyxVSAThxya namaH sherxVSAThxya namaH,\break 3) rudArxya namaH, 4) kAlAya namaH, 5) kalAya namaH, 6) kala, 7) vikaraNAya namaH, 8) bala vikaraNAya namaH, 9) bala parxmathanAya namaH, 11) savaRBUtadamanAya namaH, 12) mana, 13) unamxnAya
+\newmeaning{\arthanonum{\qquad vAmadeVvamaMtarxda hadimUru kalegaLu: 1) vAmadeVvAya namaH, 2) jeyxVSAThxya namaH sherxVSAThxya namaH,\break 3) rudArxya namaH, 4) kAlAya namaH, 5) kalAya namaH, 6) kala, 7) vikaraNAya namaH, 8) bala vikaraNAya namaH, 9) bala, 10) parxmathanAya namaH, 11) savaRBUtadamanAya namaH, 12) mana, 13) unamxnAya
 namaH; rAjasiV, rakASx, rati, pAliniV, kAmA, saMyaminiV, kirxyA, budidhx,
 bArxhamxNiV, dhAtirxV, BArxmiNiV, moVhiniV matutx gArxmiNiV eMdu karxmavAgi I
 hadimUru kalegaLa hesarugaLu.}}
@@ -11879,7 +11879,7 @@ IshavxraH pavanoV deVvoV... |
 \newmeaning{\ullekha{A savxyaMBumUtiRya muKadalilx Ishavxra puTiTxda (savasaM. 3; cenanxba. 1078-363).}}
 \smallskip
 \newmeaning{\arthanonum{\qquad sAmAnayxvAgi shaMkarAcAyaRra cidadevxYtadalilx ``Ishavxra'' eMba padavu saguNabarxhamxnige anavxyavAgutatxde. niguRNa barxhamxnu niSikxrXya; avanu yAva kAyaRkUkx kAraNanalalx. Adare nAvu ajAcnxnadiMdAgi barxhamxneV saqSiTx mADutAtxneMdu tapupx tiLidu\-koLuLxtetxVve. hiVge saqSiTx, sithxti matutx layagaLanunx mADuva deYvaveV Ishavxra.}}
-\newmeaning{\arthanonum{\qquad Adare vacanagaLalilx parxsAtxpisalapxTiTxruva Ishavxranu saqSiTxsuvu\-dilalx. avugaLa parxkAra, saqSiTxkAyaRvu barxhamxnige miVsalAgidudx, kAyaR viSuNxvu sithxti (rakaSxNA) kAyaRvanUnx, Ishavxranu saMhAravanUnx mADutAtxne. kelavu vacanakArara parxkAra, Ishavxra anugarxhakAyaRvanUnx, rudarxnu saMhArakAyaRvanUnx mADutAtxre.}}
+\newmeaning{\arthanonum{\qquad Adare vacanagaLalilx parxsAtxpisalapxTiTxruva Ishavxranu saqSiTxsuvu\-dilalx. avugaLa parxkAra, saqSiTxkAyaRvu barxhamxnige miVsalAgidudx,  viSuNxvina sithxti (rakaSxNA) kAyaRvanUnx, Ishavxranu saMhAravanUnx mADutAtxne. kelavu vacanakArara parxkAra, Ishavxra anugarxhakAyaRvanUnx, rudarxnu saMhArakAyaRvanUnx mADutAtxre.}}
 \smallskip
 \newmeaning{\ni{IshavxraH Ishf+varacf}}
 \vskip -2pt
@@ -11952,7 +11952,7 @@ daqshayxteV shUrxyateV yacacx paMcabarxhAmxtamxkaM savxyamf ||
 \end{shl}
 \medskip
 \pauthor{(paM.barx. u., 21)}
-\newmeaning{\artha{``IshAnaH savaRvidAyxnAM IshavxraH savaRBUtAnAM barxhAmxdhipatibaRhamxNoV{\char'263}dhipatiH barxhAmx shivoV meV asutx sadAshivoV{\char'263}mf''. I maMtarxdalilxruva IshAna, Ishavxra, barxhamx, shiva, sadAshiva eMba paMcabarxhamxmUtiRgaLalilx oMdu; I paMcamUtiRgaLa savxrUpaveV paMcaparxNava; IshAna mUtiRya vaNaR biLi, jaTAmukuTaBUSita, nAlukx muKagaLu, hanenxraDu kaNuNxgaLu, nAlukx toVLugaLu, elalx shuBalakaSxNagaLiMda kUDida shevxVtavasatxrXdhAri, keYgaLalilx TaMkatirxshUlaveMba AyudhadAri, varada-aBaya muderxgaLiMda kUDida,\break savARMgasuMdaravAda, savARBaraNaBUSita, divayxgaMdha\-leVpita shariVra, divayxkusumagaLiMda shoVBitavAda rUpa. IshAnasavxrUpavu piMDabarxhamx shivasAdAKayx tatatxvX:}}
+\newmeaning{\artha{``IshAnaH savaRvidAyxnAM IshavxraH savaRBUtAnAM barxhAmxdhipatibaRhamxNoV{\char'263}dhipatiH barxhAmx shivoV meV asutx sadAshivoV{\char'263}mf''. I maMtarxdalilxruva IshAna, Ishavxra, barxhamx, shiva, sadAshiva eMba paMcabarxhamxmUtiRgaLalilx oMdu; I paMcamUtiRgaLa savxrUpaveV paMcaparxNava; IshAna mUtiRya vaNaR biLi, jaTAmukuTaBUSita, nAlukx muKagaLu, hanenxraDu kaNuNxgaLu, nAlukx toVLugaLu, elalx shuBalakaSxNagaLiMda kUDida shevxVtavasatxrXdhAri, keYgaLalilx TaMkatirxshUlaveMba AyudhadhAri, varada-aBaya muderxgaLiMda kUDida,\break savARMgasuMdaravAda, savARBaraNaBUSita, divayxgaMdha\-leVpita shariVra, divayxkusumagaLiMda shoVBitavAda rUpa. IshAnasavxrUpavu piMDabarxhamx shivasAdAKayx tatatxvX:}}
 \smallskip
 \begin{shl}
 IshAnashecxVshavxroV barxhAmx shivashecxVti sadAshivaH |\\[1pt]
@@ -16007,15 +16007,12 @@ I riVtiya kamaRvAdavu vacanakArarige sivxVkArAhaR\-valalx. avara parxkAra, {kama
 \newmeaning{\ni{kamaR parxdhAnaM iti yaH vadati saH - kamaRvAdiV}}
 \end{entry}
 
-\vskip 2pt
-
 \begin{entry}
 \word{kamaRvilalxda kAraNika}
 \src{va}
 \meaning{\arthanonum{jiVvanumxkatx; hiMdina elalx kamaRgaLanUnx {suTuTx}, muMde kamaRgaLu yAvudeV Pala niVDadaMte mADida sharaNanu kAraNika:} \ullekha{kamaRvilalxda kAraNikanu, apiRta\-vilalxda ApAyxyani, jaMgamavilalxda samashiVlanu, liMga\-vilalxda nirutanu. parxsAdavilalxda pariNAmi kUDalacenanxsaMgA nimamx sharaNanu (savasaM. 3; cenanxba. 769-234).}}
 \end{entry}
 
-\vskip 2pt
 
 \begin{entry}
 \word{kamaRvilalxda pUje}
@@ -16024,12 +16021,10 @@ I riVtiya kamaRvAdavu vacanakArarige sivxVkArAhaR\-valalx. avara parxkAra, {kama
 \ullekha{kamaRvilalxda pUje, nimaRla\-veMbudu toVrada A jaDa, umamxLa dumamxLaveMba uBayavaLida sumAmxnasuKige kamaR nimaRlaveMbudoMdU ilalx (savasaM. 8; mAdAce. 1158-416).}}
 \end{entry}
 
-\vskip 2pt
-
 \begin{entry}
 \word{kamaRsAdAKayx}
 \meaning{\arthanonum{paMcasAdAKayxgaLalilx oMdu; kirxyA\-shakitxya dashAMshadiMda janayxvAda sadAshivatatatxvX. nivaqtitxkaleyiMda {kUDida}, nAda biMdugaLiMda kUDiruva liMgatatatxvXvu jagatitxna saqSiTx, sithxti, layagaLige kAraNavAdadudx. idu savaRmaMtarx\-gaLige mUlasAthxna, deVvAsurarige pUjayx, visheVSa rUpadiMda elalx kirxyegaLigU AdhAraBUtavAda tatatxvX. kataRqsAdAKAyxdigaLu niSakxlagaLAdare, kamaRsAdAKayxvu sakala. I kAraNadiMda I sAdAKayxdiMda paMcaviMshati (ipapxtetxYdu) liVlAmUtiRyAda vishiSaTx maheVshavxranu udayisutAtxne:}}
-\medskip
+\smallskip
 \begin{shl}
 nivaqtitxkalayA yukatxM kirxyAshakitxsamudaBxvamf |\\[1pt]
 nAdabiMdusamAyukatxM liMgaM saqSATxyXdikAraNamf ||\\[3pt]
@@ -16038,8 +16033,6 @@ kirxyAvisheVSatatAtxvXKayxM kamaRrUpamudiVritamf ||
 \end{shl}
 \smallskip
 \pauthor{(sU.A.kirx.pA., 1. 43-44)}
-\smallskip
-\pauthor{(shi.ta.ra., BA-1, 1.6. 39-44)}
 \smallskip
 %\newmeaning{\artha{paMcasAdAKayxgaLalilx oMdu; mahAliMgadiMda udaBxvisuva jagatitxnalilxrabeVkAda sUthxlatara sAdhanasAmagirxgaLanunx oLagoMDudu.}
 \newmeaning{\ullekha{BakatxMge paqthivxyeV aMga, A {aMgakekx} sucitatxveV hasatx, A hasatxkekx kamaRsAdAKayx, A sAdAKayxkekx kirxyAshakitx (savasaM. 3; {cenanxba.} 1405-501); A kamaRsAdAKayxvapapx mAheVshavxranu sakala\-savxrUpadiM soVmadhara modalAda liMgoVdaBxva kaDeyAda paMcaviMshatiliVleya tALadx sakalavapapx mAheVshavxranu (savasaM. 6; Adayayx. 783-235); shivasAdAKayx amUtiRsAdAKayx\break mUtiRsAdAKayx kataqRsAdAKayx kamaRsAdAKayxveMdu shivAdi\-yAda sAdAKayxmUtiRgaLeYdu (savasaM. 11; toVMTasi. 545-249); kamaRsAdAKayxsavxrUpavAda AcAraliMgadalilx nakAramaMtarxsavxrUpavAda GArxNeVMdirxya saMyoVgava mADa\-balAlxtane pArxNaliMgi (savasaM. 14; SaNumxKa. 774-352); A niSakxlada tatatxvX shivatatatxvXvenisihudu tAne shivasAdAKayxvenisi\-koMbudu ...neYja kataqRsAdAKayxviVshavxra kamaRsAdAKayxviVshA\-naveY (viVsheYpu. 1-8-24).}}
@@ -16087,7 +16080,7 @@ kirxyAvisheVSatatAtxvXKayxM kamaRrUpamudiVritamf ||
 \word{kamiR}
 \src{va}
 \meaning{\arthanonum{kelasa mADuvavanu; kAmiRka; kamaRkAMDada anuyAyi. yajacnxyAgAdigaLanunx mADuvavanu athavA mADisuvavanu; kamaRvanunx mADi matetx huTuTxvavanu; Bavi:}
-\ullekha{niVvu hiriyareMbiri, kamiRgaLu, niVvu keVLiri, nimamx veVda\-shAsatxrXMgaLu Ara hogaLutitxdAdxvu? `OM dAyxvA BUmiV jana\-yanf deVva EkaH' eMdu shurxti samxqqtigaLu sArutitxdAdxvu (savasaM. 1; basava. 600-150); Adayxralalx veVdayxralalx sAdhayxralalxda hiriyara noVDA. tanuvikAra manavikAra iMdirxyavikArada hiriyara noVDA. shivaciMte shivajAcnxnigaLa kaMDaDe, ALavADi nuDivaru, guheVshavxranariyada kamiRgaLu (savasaM. 2; alalxma. 129-40); liMgaparxsAdava jaMgamakekx koDuva kamiR niV keVLA!... (savasaM.\break 3; cenanxba. 1529-558); ememxgoMdu ciMte; samagAra\-goMdu ciMte. dhamiRgoMdu ciMte. kamiRgoMdu ciMte (savasaM. 5; akakxma. 108-36); vaMtikeliMgava kaTiTxkoMDu saMteya sULeyaMte iruvaru noVDA. aMtapapx pAtakarige guruvilalx, jaMgamavilalx. pAdoVdakaparxsAdavilalx. iMtapapx kamiR\-gaLa kaMDu enanx mana nAcitutx noVDA JeVMkAra nijaliMgaparxBuve (savasaM. 10; jakakxNa. 1256-617).}}
+\ullekha{niVvu hiriyareMbiri, kamiRgaLu, niVvu keVLiri, nimamx veVda\-shAsatxrXMgaLu Ara hogaLutitxdAdxvu? `OM dAyxvA BUmiV jana\-yanf deVva EkaH' eMdu shurxti samxqqtigaLu sArutitxdAdxvu (savasaM. 1; basava. 600-150); Adayxralalx veVdayxralalx sAdhayxralalxda hiriyara noVDA. tanuvikAra manavikAra iMdirxyavikArada hiriyara noVDA. shivaciMte shivajAcnxnigaLa kaMDaDe, ALavADi nuDivaru, guheVshavxranariyada kamiRgaLu (savasaM. 2; alalxma. 129-40); liMgaparxsAdava jaMgamakekx koDuva kamiR niV keVLA!... (savasaM.\break 3; cenanxba. 1529-558); vaMtikeliMgava kaTiTxkoMDu saMteya sULeyaMte iruvaru noVDA. aMtapapx pAtakarige guruvilalx, jaMgamavilalx. pAdoVdakaparxsAdavilalx. iMtapapx kamiR\-gaLa kaMDu enanx mana nAcitutx noVDA JeVMkAra nijaliMgaparxBuve (savasaM. 10; jakakxNa. 1256-617).}}
 \vskip 2pt
 \newmeaning{\ni{kamaR asimxnf asitx iti - kamiRV}}
 \end{entry}
@@ -16099,7 +16092,7 @@ kirxyAvisheVSatatAtxvXKayxM kamaRrUpamudiVritamf ||
 \meaning{\arthanonum{kamaRkekx kAraNavAguva iMdirxyagaLu; vAkukx, pANi, pAda, pAyu matutx guhayx -eMba aidu iMdirxya\-gaLu:}}
 \medskip
 \begin{shl}
-yathA jAcnxneVMdirxyAMgeVSu karxmAlilxMgaM parxtiSiThxtaM |\\[1pt]
+yathA jAcnxneVMdirxyAMgeVSu karxmAlilxMgaM parxtiSiThxtaM |\\[2pt]
 tathA kameRVMdirxyAMgeVSu karxmAlilxMgaM parxtiSiThxtaM ||
 \end{shl}
 \medskip
@@ -16117,7 +16110,7 @@ tathA kameRVMdirxyAMgeVSu karxmAlilxMgaM parxtiSiThxtaM ||
 \meaning{\arthanonum{kalapx, anukalapx, upakalapx matutx akalapx eMba nAlukx bageya viBUtigaLalilx oMdu. goVmayavanunx taMdu uMDegaTiTx mADuva vidhAna:}}
 \medskip
 \begin{shl}
-BasomxVtApxdanamudidxSaTxM catudhAR taMtarxveVdiBiH |\\
+  BasomxVtApxdanamudidxSaTxM catudhAR taMtarxveVdiBiH |\\[1pt]
 kalapxM ceYvAnukalapxM tu upakalapxmakalapxkamf ||
 \end{shl}
 \smallskip
@@ -20069,7 +20062,7 @@ paratatatxvXmayoVpAdhiH barxhamxceYtanayxmiVshavxraH ||
 \medskip
 \pauthor{(si.shi., 5. 38-40)}
 \smallskip
-\newmeaning{\ullekha{tananx tAnarida shivayoVgiya pariyeMteMdaDe; deVhi tAnalalx, jAtijAtakaMgaLu tAnalalx, pArxNa tAnalalx, dashavAyugaLu tAnalalx, iMdirxyaMgaLu tAnalalx, guNatarxyaMgaLu tAnalalx, aMtaHkaraNa catuSaTxyaMgaLu tAnalalxveMdaridu vivarisi kaLedu, tananx nija\-savxrUpa tAneV noVDi kaMDu; jiVvAtamx aMtarAtamx paramAtamx matatxM BUtAtamx shudAdhxtamx nimaRlAtamx satAyxtamx mahAtamxveMba aSaTx AtemxVshavxraru EkAthaRveMdaridu, alilxyeV talilxVyavAgihu\-diVga yoVga kANA, kUDalacenanxsaMgamadeVvA (savasaM. 3; cenanxba. 1240-433); guNatarxyaMgaLanaLida niguRNana meVle nivaRyalu baMderagitutx noVDA (savasaM. 11; toVMTasi.\break 612-274); pArxNaliMgasaMbaMdhiyAda mahAtamxnu ari\-SaDavxgaRMgaLariya, kuSxtutx pipAsu shoVka moVha jare maraNa guNatarxyadoLoMdilalx. tanutarxya malatarxya ISaNatarxya jiVvatarxya avasAthxtarxyaveMba paMcadasha mAyApaTala haridu maredu mahAGana beLagina suKava sugigxyoLiduR pArxNaliMga\-vanaciRsutitxhanu BakitxtarxyagUDi guruniraMjana cananxbasavaliMga\-dalilx (savasaM. 12; deVshikeVM. 513-154).}}
+\newmeaning{\ullekha{tananx tAnarida shivayoVgiya pariyeMteMdaDe; deVhi tAnalalx, jAtijAtakaMgaLu tAnalalx, pArxNa tAnalalx, dashavAyugaLu tAnalalx, iMdirxyaMgaLu tAnalalx, guNatarxyaMgaLu tAnalalx, aMtaHkaraNa catuSaTxyaMgaLu tAnalalxveMdaridu vivarisi kaLedu, tananx nija\-savxrUpa tAneV noVDi kaMDu; jiVvAtamx aMtarAtamx paramAtamx matatxM BUtAtamx shudAdhxtamx nimaRlAtamx satAyxtamx mahAtamxveMba aSaTx AtemxVshavxraru EkAthaRveMdaridu, alilxyeV talilxVyavAgihu\-diVga yoVga kANA, kUDalacenanxsaMgamadeVvA (savasaM. 3; cenanxba. 1240-433); guNatarxyaMgaLanaLida niguRNana meVle nivaRyalu baMderagitutx noVDA (savasaM. 11; toVMTasi.\break 612-274); pArxNaliMgasaMbaMdhiyAda mahAtamxnu ariSaDavxgaRM\-gaLariya, kuSxtutx pipAsu shoVka moVha jare maraNa guNatarxyadoLoMdilalx. tanutarxya malatarxya ISaNatarxya jiVvatarxya avasAthxtarxyaveMba paMcadasha mAyApaTala haridu maredu mahAGana beLagina suKava sugigxyoLiduR pArxNaliMga\-vanaciRsutitxhanu BakitxtarxyagUDi guruniraMjana cananxbasavaliMga\-dalilx (savasaM. 12; deVshikeVM. 513-154).}}
 \smallskip
 \newmeaning{\ni{guNAnAM tarxyaM - guNatarxyaM}}
 \end{entry}
@@ -20757,7 +20750,7 @@ seVvAmanAyxM paritayxjayx guruliMgeYkaseVvakaH |\\[1pt]
 vataRteV yaH sithxrataroV gurupArxNiV sa hi samxqqtaH ||
 \end{shl}
 \medskip
-\pauthor{(sU.A., kirx.pA., 8. 50; kirx.sA., BA-3, pu. 123; shi.ta.ra., BA-3, 9.9 46)}
+\pauthor{(sU.A., kirx.pA., 8. 50; kirx.sA., BA-3, pu. 123)}
 \smallskip
 \newmeaning{\ni{guruH Eva pArxNaH asitx asimxnf iti - gurupArxNiV}}
 \smallskip
@@ -23703,7 +23696,7 @@ itAyxkAMkASxyAM anaMtaraM carasathxlamituyxcayxteV |
 \begin{shl}
 iha liMgaSaTfsathxleV BakatxsathxlasamAsharxyAtf Adw nava sathxlAni.... ESAM
 navasathxlAnAM nAmAni paqthakf paqthakf kathayxMteV |
-atha tAni udidxshati... 9) carasathxlamf || iti.
+atha tAni udidxshati...) carasathxlamf || iti.
 \end{shl}
 \medskip
 \pauthor{(si.shi., tatatxvX, 15. 4-6, pu. 415)}
@@ -23800,7 +23793,7 @@ yaMtipupxdA liMgavu aikayxnalilx carAcara
 \begin{shl}
 veMbuBayalayavAda BeVda....\\[1pt]
 carAcaralayasathxlavAdudu....\\[1pt]
-carAcaralayasathxlada vicAra. 135 
+carAcaralayasathxlada vicAra.
 \end{shl}
 \medskip
 \pauthor{(EkoVsha. 134-2)}
@@ -24642,7 +24635,7 @@ citetxnisitutx (savasaM. 10; kADasi - 16-8)}
 \vskip 2pt
 \newmeaning{\arthanonum{(QU) aidu vaNaRgaLu: namaH shivAya.}}
 \vskip 2pt
-\newmeaning{\arthanonum{(e) aidu nAdagaLu: ati sUkaSxmX, sUkaSxmX, puSaTx, apuSaTx, kaqtima.}}
+\newmeaning{\arthanonum{(e) aidu nAdagaLu: ati sUkaSxmX, sUkaSxmX, puSaTx, apuSaTx, kaqtitxma.}}
 \vskip 2pt
 \newmeaning{\arthanonum{(E) catuviRdhaPala : guru, liMga, jaMgama matutx parxsAda:}}
 \newmeaning{\ullekha{satAkxyaka modalAda SoVDasha kalenelegaLeV sadugxrumuKadiM cidaMgava mADikoMDu, SoVDashavaNaRveV sadugxrumuKadiM cidaGxnaliMgava mADikoMDu, sadugxrumuKadiM eraDaLidu Eka\-savxrUpadiMda joyxVtijoyxVti berataMte basava modalAda parxmatha\-gaNaMgaLelalx bayaloLage mahAbayalAdaru noVDa, saMgana\-basaveVshavxra (savasaM. 10; gurusi. 692-382).}
@@ -25885,7 +25878,7 @@ savxyaM caraM paraM ceVti terxYvidhayxM samupAgatamf ||
 \begin{entry}
 \word{jaMgamaparxsAda}
 \meaning{\artha{guruparxsAda, liMgaparxsAda matutx jaMgama\-parxsAda eMba mUru bageya parxsAdagaLalilx oMdu; jaMgamanu sivxVkarisida naMtara uLida padAthaR; jaMgamamuKadiMda baMdudu:}
-\ullekha{jaMgamakekx niVDi jaMgamaparxsAdava koMDaDe nina\-gapiRta kANA (savasaM. 1; basava. 777-197); jaMgamaparxsAda\break BavaM nAsitx ...jaMgamaparxsAdavalalxde koMqaDenAdaDe aGoVra\-nAyakanaraka (savasaM. 3; cenanxba. 99-28); caraliMga divayx\-parxsAdavilalxde yAvaniradenanx pUjisuvanAtaMge Ganamukitx dore\-koLaLxdeY ...adu kAraNaM jaMgamaparxsAdavane koMbudu kaNA liMgadoDaverasi (viVsheYpu. 1-3-41).}
+\ullekha{jaMgamakekx niVDi jaMgamaparxsAdava koMDaDe nina\-gapiRta kANA (savasaM. 1; basava. 777-197); jaMgamaparxsAda\break BavaM nAsitx ...jaMgamaparxsAdavalalxde koMDenAdaDe aGoVra\-nAyakanaraka (savasaM. 3; cenanxba. 99-28); caraliMga divayx\-parxsAdavilalxde yAvaniradenanx pUjisuvanAtaMge Ganamukitx dore\-koLaLxdeY ...adu kAraNaM jaMgamaparxsAdavane koMbudu kaNA liMgadoDaverasi (viVsheYpu. 1-3-41).}
 \artha{guru, liMga, jaMgama, ApAyxyana, samaya, paMceVMdirxyavirahita, aMtaHkaraNavirahitacatuSaTxya, parxsAdiyaparxsAda, sadABxva, samate matutx jAcnxna eMba hanonxMdu bageya parxsAdagaLalilx oMdu:}
 \ullekha{jaMgamaparxsAda BoVjanakekx sidadhxpaDisi liMgakekx koTuTx salisu\-vudeV jaMgamaparxsAdavu (shivAkoV. 84-162).}
 \artha{caraliMgasheVSavanunx maMtarxpUvaRkavAgi seVvisuva karxmagaLalilx oMdu:}
@@ -28555,8 +28548,10 @@ jiVvoV huyxpAsakaH sAkASxtf upAsayxM barxhamx keVvalamf |
 \newmeaning{\artha{`tatatxvXmasi' mahAvAkayxdalilxna avideyxyiMda kUDiruva {barxhamx}:}}
 \smallskip
 \begin{shl}
-tatatxvXmasiVtayxtarx avidoyxVpahitaM barxhemxYva jiVva iti shurxtiparxtipanAnx{\char'263}\\
-vidoyxVpAdhikadeVheVMdirxyAdayxvaciCxnanxH sAMsArikoV jiVvaH tavxMpadavAcayxH ||
+tatatxvXmasiVtayxtarx avidoyxVpahitaM\\[1pt]
+barxhemxYva jiVva iti shurxtiparxtipanAnx{\char'263} |\\[2pt]
+vidoyxVpAdhikadeVheVMdirxyAdayxvaciCxnanxH\\[1pt]
+sAMsArikoV jiVvaH tavxMpadavAcayxH ||
 \end{shl}
 \medskip
 \pauthor{(liM.dhA., caM., pu. 168)}
@@ -28886,8 +28881,8 @@ aMgarUpoV hi jiVvAtAmx BavaBAvaniyaMtirxtaH |
 \pauthor{(liM.dhA.caM., pu. 174)}
 \smallskip
 \vskip 2pt
-\newmeaning{\artha{jaMgamaliMgasathxladalilxruva olavuliMgada mUru sathxla\-gaLalilx oMdu; jiVvaBAvavanunx niVgikoMDu, deVhaguNavanunx\break maretu parxNavadhAyxnadalilx niratanAda mahAjAcnxniyalilx para\-shivanu nelesuvaneMbudanunx nirUpisuva sathxla; liMgavu pArxNaliMgiyalilx jiVvaBAvavanunx toDeduhAki samayxgfjAcnxnavananxLavaDisuva sathxla:}
-\ullekha{olavuliMgatirxvidha: jiVvAtamx, aMtarAtamx, para\-mAtamx (savasaM. 3; cenanxba. 849-255); A parxNavadoLf jAni tanuguNavanaMtu sUsada mahAjAcnxniyoLu shivanipaRniV sathxlaM jiVvAtamxneY (viVsheYpu. 8-126-34).}
+\newmeaning{\artha{jaMgamaliMgasathxladalilxruva olavuliMgada mUru sathxla\-gaLalilx oMdu; jiVvaBAvavanunx niVgikoMDu, deVhaguNavanunx\break maretu parxNavadhAyxnadalilx niratanAda mahAjAcnxniyalilx para\-shivanu nelesuvaneMbudanunx nirUpisuva sathxla; liMgavu pArxNaliMgiyalilx jiVvaBAvavanunx toDeduhAki samayxgfjAcnxnavanunx aLavaDisuva sathxla:}
+\ullekha{olavuliMgatirxvidha: jiVvAtamx, aMtarAtamx, para\break\-mAtamx (savasaM. 3; cenanxba. 849-255); A parxNavadoLf jAni tanuguNavanaMtu sUsada mahAjAcnxniyoLu shivanipaRniV sathxlaM jiVvAtamxneY (viVsheYpu. 8-126-34).}
 \artha{Atamxna vayxvahAragaLa vayxtAyxsadiMdAguva jiVvAtamx, aMtarAtamx, paramAtamx, nimaRlAtamx, shudAdhxtamx, jAcnxnAtamx, mahAtamx matutx BUtAtamx eMba eMTu parxkAragaLalilx oMdu:}
 \ullekha{jiVvAtamxnaMta\-rAtamxM parAtamxM nimaRlAvisheVSAtamx shudAdhxtamx sujAcnxnAtamxnoV\-valu mahAtamx BUtAtamxniMtaSATxtamxru (viVsheYpu. 7-100-20).}
 \artha{Atamxna parxgatiya kuruhugaLeMdu heVLalAguva {oMbatutx} avasethxgaLalilx oMdu:}
